syntax = "proto3";
package integration_api;
option go_package = "github.com/lexatic/web-backend/protos/lexatic-backend";


message AuditInfo {
    uint64 UserAuthTokenId = 1;
    uint64 OrganizationId = 2;
    uint64 ProviderModelId = 3;
    uint64 UserId = 4;
}
message Credential {
    uint64 id = 1 [jstype = JS_STRING];
    string value = 2;
}

enum OpenAiRole {
    system = 0;
    assistant = 1;
    user = 2;
}

message OpenAiConversation {
    //    Will change this to enum later
    string role = 1;
    string content = 2;
}

message OpenAiChatRequest {
    Credential credential = 1;
    string model = 2;
    repeated OpenAiConversation conversations = 3;
    AuditInfo auditInfo = 4;
    map<string, string> parameters = 5;
}

message OpenAiChatResponse {
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}

message OpenAiGenerateRequest {
    Credential credential = 1;
    string prompt = 2;
    AuditInfo auditInfo = 3;
}

message OpenAiGenerateResponse {
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}

service OpenAiService {
    rpc Chat(OpenAiChatRequest) returns (OpenAiChatResponse);
    rpc Generate(OpenAiGenerateRequest) returns (OpenAiGenerateResponse);
}

message CohereChatRequest {
    string prompt = 1;
    Credential credential = 2;
    string model = 3;
    repeated CohereChat chats = 4;
    AuditInfo auditInfo = 5;
}

message CohereChat {
    string role = 1;
    string message = 2;
}

message CohereChatResponse{
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}
message CohereGenerateRequest{
    string prompt = 1;
    Credential credential = 2;
    string model = 3;
    optional string version = 4;
    AuditInfo auditInfo = 6;
}

message CohereGenerateResponse {
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}
service CohereService {
    rpc Chat(CohereChatRequest) returns (CohereChatResponse);
    rpc Generate(CohereGenerateRequest) returns (CohereGenerateResponse);
}


message AnthropicChatRequest{
    string Model = 1;
    string Version = 2;
    Credential credential = 3;
    string Prompt = 4;
    int64 MaxTokensToSample = 5;
    AuditInfo auditInfo = 6;
}
message AnthropicGenerateRequest{
    string Model = 1;
    string Version = 2;
    Credential credential = 3;
    string Prompt = 4;
    int64 MaxTokensToSample = 5;
    AuditInfo auditInfo = 6;
}
message AnthropicChatResponse{
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}
message AnthropicGenerateResponse{
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}

service AnthropicService {
    rpc Chat(AnthropicChatRequest) returns (AnthropicChatResponse);
    rpc Generate(AnthropicGenerateRequest) returns (AnthropicGenerateResponse);
}

message ReplicateChatRequest{}
message ReplicateGenerateRequest{
    string version = 1;
    string prompt = 2;
    Credential credential = 3;
    AuditInfo auditInfo = 4;
}
message ReplicateChatResponse{
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}
message ReplicateGenerateResponse{
    int32 code = 1;
    bool success = 2;
    uint64 externalAuditId = 3;
    optional string response = 4;
    optional string errorMessage = 5;
}

service ReplicateService {
    rpc Chat(ReplicateChatRequest) returns (ReplicateChatResponse);
    rpc Generate(ReplicateGenerateRequest) returns (ReplicateGenerateResponse);
}



message Contact {
    string email = 1;
    string name = 2;
}
message WelcomeEmailRequest{
    uint64 userId = 1;
    Contact to = 2;
}
message WelcomeEmailResponse{
    int32 code = 1;
    bool success = 2;
}
message ResetPasswordEmailRequest{
    uint64 userId = 1;
    Contact to = 2;
    string resetPasswordLink = 3;
}
message ResetPasswordEmailResponse{
    int32 code = 1;
    bool success = 2;
}
message InviteMemeberEmailRequest{
    uint64 userId = 1;
    Contact to = 2;
    string organizationName = 3;
    string projectName = 4;
    string inviterName = 5;

}
message InviteMemeberEmailResponse{
    int32 code = 1;
    bool success = 2;
}

service SendgridService {
    rpc WelcomeEmail(WelcomeEmailRequest) returns (WelcomeEmailResponse);
    rpc ResetPasswordEmail(ResetPasswordEmailRequest) returns (ResetPasswordEmailResponse);
    rpc InviteMemberEmail(InviteMemeberEmailRequest) returns (InviteMemeberEmailResponse);
}