syntax = "proto3";
package vault_api;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/lexatic/web-backend/protos/lexatic-backend";



message ProviderCredential {
    uint64 id = 1 [jstype = JS_STRING];
    uint64 providerId = 2 [jstype = JS_STRING];
    uint64 organizationId = 3 [jstype = JS_STRING];
    string name = 4;
    string key = 5;
    string status = 6;
    string provider = 7;
    string image = 8;
    google.protobuf.Timestamp createdDate = 9;
}

message CreateProviderCredentialRequest {
    uint64 providerId = 1 [jstype = JS_STRING];
    string providerKey = 2;
    string keyName =  3;
}

message CreateProviderCredentialResponse {
    int32 code = 1;
    bool success = 2;
    ProviderCredential data = 3;
}


message DeleteProviderCredentialRequest {
    uint64 providerKeyId = 1 [jstype = JS_STRING];
}

message DeleteProviderCredentialResponse {
    int32 code = 1;
    bool success = 2;
    uint64 id = 3 [jstype = JS_STRING];
}

message GetAllProviderCredentialResponse {
    int32 code = 1;
    bool success = 2;
    repeated ProviderCredential data = 4;

}

message GetProviderCredentialRequest {
    uint64 providerId = 3 [jstype = JS_STRING];
    uint64 organizationId = 4 [jstype = JS_STRING];
}

message GetProviderCredentialResponse {
    int32 code = 1;
    bool success = 2;
    string name = 3;
    string key = 4;
    uint64 id = 5 [jstype = JS_STRING];
}

message GetAllProviderCredentialRequest {
    optional bool mask = 1;
}

message UpdateVaultCredentialsRequest {
    uint64 id = 1 [jstype = JS_STRING];
    uint64 providerId = 2 [jstype = JS_STRING];
    string name = 4;
    string key = 5;
}

message UpdateVaultCredentialResponse {
    int32 code = 1;
    bool success = 2;
    ProviderCredential data = 3;
}

service VaultService {
    rpc CreateProviderCredential(CreateProviderCredentialRequest) returns (CreateProviderCredentialResponse);
    rpc DeleteProviderCredential(DeleteProviderCredentialRequest) returns (DeleteProviderCredentialResponse);
    rpc GetAllProviderCredential(GetAllProviderCredentialRequest) returns (GetAllProviderCredentialResponse);
    rpc GetProviderCredential(GetProviderCredentialRequest) returns (GetProviderCredentialResponse);
    rpc UpdateVaultCredentials(UpdateVaultCredentialsRequest) returns (UpdateVaultCredentialResponse);
}

//
//  Scoped Credentials
//
//

message RollScopeCredentialRequest {
    string KeyType = 1;
}

message RollScopeCredentialResponse {
}

message AddIpRestrictionRequest {}
message AddIpRestrictionResponse {}
message DeleteIpRestrictionRequest {}
message DeleteIpRestrictionResponse {}
message ScopeCredential {}
message GetScopeCredentialResponse {
    int32 code = 1;
    bool success = 2;
    ScopeCredential data = 3;

}
service ScopeCredentialService{
    rpc RollPublishableKeyCredential(RollScopeCredentialRequest) returns (RollScopeCredentialResponse);
    rpc RollSecretKeyCredential(RollScopeCredentialRequest) returns (RollScopeCredentialResponse);
    rpc AddIpRestriction(AddIpRestrictionRequest) returns (AddIpRestrictionResponse);
    rpc DeleteIpRestriction(DeleteIpRestrictionRequest) returns (DeleteIpRestrictionResponse);
    rpc GetScopeCredential(google.protobuf.Empty) returns (GetScopeCredentialResponse);
}